fixed position of navbar on mobile and tablet

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -116,6 +116,7 @@
         justify-content: center;
         position: fixed;
         top: 0;
+        z-index: 10;
         /* margin-bottom: 20px; */
     }
 
